--- a/app/src/frontend/index.development.html
+++ b/app/src/frontend/index.development.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Electron typescript example</title>
+        <title>Yamplayer 2</title>
+        <link rel="stylesheet" type="text/css" href="http://localhost:8180/styles.css" />
     </head>
     <body>
         <main id="app" class="app"></main>
