--- a/app/src/frontend/index.production.html
+++ b/app/src/frontend/index.production.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Electron typescript example</title>
-  </head>
-  <body>
-    <main id="app" class="app"></main>
-    <script type="text/javascript" src="bundle.js"></script>
-  </body>
+    <head>
+        <title>Yamplayer 2</title>
+        <link rel="stylesheet" type="text/css" href="styles.css" />
+    </head>
+    <body>
+        <main id="app" class="app"></main>
+        <script type="text/javascript" src="bundle.js"></script>
+    </body>
 </html>
